aboutページのview変更

--- a/index.html
+++ b/index.html
@@ -294,24 +294,49 @@
           <h2 class="section">About me</h2>
 
           <div class="about-me">
-            <h4 style="margin-bottom: 10px;">Kumazawa ayano</h4>
-            <div>Ruby on Railsを使用したwebアプリの開発に取り組んでいます。<br>
-              オリジナルキャラクター作りにはまってます。
+            <div class="row about-box">
+              <div class="col-md-3">
+                <h4 class= "about-title">Kumazawa ayano</h4>
+              </div>
+              <div class="col-md-9">
+                <div class="about-content">Ruby on Railsを使用したwebアプリの開発に取り組んでいます。<br>
+                  オリジナルキャラクター作りにはまってます。
+                </div>
+                <br>
+              </div>
             </div>
-            <br>
-            <dl>
-              <dt>スキル</dt>
-              <dd>Ruby on Rails / Ruby / html / css / bootstrap / git </dd>
-              <dt>勉強中、したいこと</dt>
-              <dd>JavaScript（勉強中）/ vue.js / AWS </dd>
-              <dt>特技・趣味</dt>
-              <dd>水泳/ 読書 / ゲーム / 映画鑑賞 </dd>
-            </dl>
+            <div class="row about-box">
+              <div class="col-md-3">
+                <h4 class= "about-title">Studying・SKILL</h4>
+              </div>
+              <div class="col-md-9">
+                <div class="about-content">Ruby on Rails / Ruby / html / css / bootstrap / git
+                </div>
+                <br>
+              </div>
+            </div>
+            <div class="row about-box">
+              <div class="col-md-3">
+                <h4 class= "about-title">what I wanna do</h4>
+              </div>
+              <div class="col-md-9">
+                <div class="about-content">JavaScript（勉強中）/ vue.js / AWS <br>
+                </div>
+                <br>
+              </div>
+            </div>
+            <div class="row about-box">
+              <div class="col-md-3">
+                <h4 class= "about-title">Hobby</h4>
+              </div>
+              <div class="col-md-9">
+                <div class="about-content">水泳/ 読書 / ゲーム / 映画鑑賞</div>
+                <br>
+              </div>
+            </div>
           </div>
-          
         </div>
       </div>
-
     </div>
   </div>
 </body>
