[fix]難しかったこと、学んだこと追加

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <nav class="navbar">
       <div class="text-center logo">
         <h1 class="logo-title">Ako portfolio</h1>
-        <img src="" alt="">
       </div>
     </nav>
   </header>
@@ -101,10 +100,14 @@
                   <dd>ECサイトにある機能を実装して自分でアレンジして作成したアプリです。</dd>
                   <dt>開発理由</dt>
                   <dd>ECサイトの機能を自分で１からの開発に挑戦してみたいと思い作成しました</dd>
+                  <dt>難しかったこと</dt>
+                  <dd>bootstrapに頼らずなるべくcssで実装するようにしました。<br>
+                    scopeやhelper、pluckの使い方を学びました。
+                  </dd>
                   <dt>機能</dt>
-                  <dd>ゲストログイン / 退会機能/ 購入する / 商品に対するレビュー / お気に入り / メール送信</dd>
+                  <dd>ゲストログイン / アカウント編集,退会機能/ 購入する機能 / レビュー機能 / お気に入り機能 / お問い合わせ/ 検索/ タグ機能 / 管理者機能</dd>
                   <dt>使用した技術</dt>
-                  <dd>Ruby on Rails / Ruby / haml / css / JavaScript/ bootstrap </dd>
+                  <dd>Ruby on Rails / Ruby / hamlを使いました / css / JavaScript/ bootstrap </dd>
                   <dt>URL</dt>
                   <dd>
                     <a href="#" target="_blank"></a>
@@ -184,8 +187,13 @@
                   <dd>苺大福を予約するアプリです。</dd>
                   <dt>開発理由</dt>
                   <dd>苺大福を電話で予約するお店が多いため、作成しました。</dd>
+                  <dt>難しかったこと</dt>
+                  <dd>確認画面の実装、SimpleCalenderからの予約、<br>
+                    人数制限と休みの日は予約ができないようにする
+                    raketask、rspecの使い方を学びました。また、リファクタリングにも挑戦しました。
+                  </dd>
                   <dt>機能</dt>
-                  <dd>ゲストログイン / 予約機能 / お問い合わせ機能 / 管理者機能 </dd>
+                  <dd>ゲストログイン / 退会機能 / 予約機能 / お問い合わせ機能 / 管理者機能 / カレンダー /ステータス </dd>
                   <dt>使用した技術</dt>
                   <dd>Ruby on Rails / Ruby / html / css / bootstrap </dd>
                   <dt>URL</dt>
@@ -273,8 +281,12 @@
                   <dd>スクールで勉強していてみんなで情報を共有することがあまりありませんでした。<br>
                     教えることが最大のアウトプットだと知りその手助けができるアプリを作成したくて作りました。<br>
                   </dd>
+                  <dt>難しかったこと</dt>
+                  <dd>非同期通信、フォロー機能、timeline機能<br>
+                    苦手だったフォロー機能と非同期通信に挑戦しました。コードのリファクタリングだったり、可読性が上がるように実装していきたいです。
+                  </dd>
                   <dt>機能</dt>
-                  <dd>ゲストログイン / 投稿機能 / いいね機能 / コメント機能 / 通知機能 / フォロー機能 / タイムライン機能 / DM機能 / カレンダー / グループ機能 /タグ機能 </dd>
+                  <dd>ゲストログイン / 投稿機能 / いいね機能 / コメント機能 / 通知機能 / 検索機能 /フォロー機能 / タイムライン機能 / DM機能 / カレンダー / グループ機能 /タグ機能 /メール機能 </dd>
                   <dt>使用した技術</dt>
                   <dd>Ruby on Rails / Ruby / html / css / bootstrap </dd>
                   <dt>URL</dt>
@@ -301,6 +313,7 @@
               <div class="col-md-9">
                 <div class="about-content">Ruby on Railsを使用したwebアプリの開発に取り組んでいます。<br>
                   オリジナルキャラクター作りにはまってます。
+                  <img src="ayako-image.png" alt="original-image">
                 </div>
                 <br>
               </div>
@@ -335,6 +348,15 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class='container py-3 text-center'>
+    <div class='row'>
+      <div class='col-12'>
+        <div class='copyright'>
+          <p>Copyright © 2022. AyanoKumazawa portfolio</p>
         </div>
       </div>
     </div>
