aboutの画像追加

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         <!-- profile -->
         <div class="text-center">
           <h2 class="section">About me</h2>
-
+          <img src="image/ayako-image.png" alt="original-image" class="about-image">
           <div class="about-me">
             <div class="row about-box">
               <div class="col-md-3">
@@ -313,7 +313,7 @@
               <div class="col-md-9">
                 <div class="about-content">Ruby on Railsを使用したwebアプリの開発に取り組んでいます。<br>
                   オリジナルキャラクター作りにはまってます。
-                  <img src="ayako-image.png" alt="original-image">
+                  
                 </div>
                 <br>
               </div>
@@ -352,10 +352,10 @@
       </div>
     </div>
   </div>
-  <div class='container py-3 text-center'>
-    <div class='row'>
-      <div class='col-12'>
-        <div class='copyright'>
+  <div class ='container py-3 text-center'>
+    <div class ='row'>
+      <div class= 'col-12'>
+        <div class= 'copyright'>
           <p>Copyright © 2022. AyanoKumazawa portfolio</p>
         </div>
       </div>
