--- a/index.html
+++ b/index.html
@@ -352,14 +352,19 @@
       </div>
     </div>
   </div>
-  <div class ='container py-3 text-center'>
-    <div class ='row'>
-      <div class= 'col-12'>
-        <div class= 'copyright'>
-          <p>Copyright © 2022. AyanoKumazawa portfolio</p>
+  <footer id="footer">
+    <p id="page-top"><a href="#"><span>Page Top</span></a></p>
+    <div class ='container py-3 text-center'>
+      <div class ='row'>
+        <div class= 'col-12'>
+          <div class= 'copyright'>
+            <p>Copyright © 2022. AyanoKumazawa portfolio</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </footer>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
