--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
                   <dd>苺大福を電話で予約するお店が多いため、作成しました。</dd>
                   <dt>難しかったこと</dt>
                   <dd>確認画面の実装、SimpleCalenderからの予約、<br>
-                    人数制限と休みの日は予約ができないようにする
-                    raketask、rspecの使い方を学びました。また、リファクタリングにも挑戦しました。
+                    人数制限と休みの日は予約ができないようにする。
+                    Activejob,raketask、rspecの使い方を学びました。また、リファクタリングにも挑戦しました。
                   </dd>
                   <dt>機能</dt>
-                  <dd>ゲストログイン / 退会機能 / 予約機能 / お問い合わせ機能 / 管理者機能 / カレンダー /ステータス </dd>
+                  <dd>ゲストログイン / 退会機能 / 予約機能 / お問い合わせ機能 / 管理者機能 / カレンダー /ステータス/非同期メール</dd>
                   <dt>使用した技術</dt>
                   <dd>Ruby on Rails / Ruby / html / css / bootstrap </dd>
                   <dt>URL</dt>
@@ -286,7 +286,7 @@
                     苦手だったフォロー機能と非同期通信に挑戦しました。コードのリファクタリングだったり、可読性が上がるように実装していきたいです。
                   </dd>
                   <dt>機能</dt>
-                  <dd>ゲストログイン / 投稿機能 / いいね機能 / コメント機能 / 通知機能 / 検索機能 /フォロー機能 / タイムライン機能 / DM機能 / カレンダー / グループ機能 /タグ機能 /メール機能 </dd>
+                  <dd>ゲストログイン / 投稿機能 / いいね機能 / ブックマーク機能 / コメント機能 / 通知機能 / 検索機能 /フォロー機能 / タイムライン機能 / DM機能 / カレンダー / グループ機能 /タグ機能 /メール機能 </dd>
                   <dt>使用した技術</dt>
                   <dd>Ruby on Rails / Ruby / html / css / bootstrap </dd>
                   <dt>URL</dt>
@@ -358,6 +358,7 @@
       <div class ='row'>
         <div class= 'col-12'>
           <div class= 'copyright'>
+            <a href=https://github.com/ayano309 target="_blank"><i class="fa-brands fa-github fa-2x"></i></a>
             <p>Copyright © 2022. AyanoKumazawa portfolio</p>
           </div>
         </div>
