[add]特に頑張ったことについて強調した

--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
                   <dd>ECサイトの機能を自分で１からの開発に挑戦してみたいと思い作成しました</dd>
                   <dt>難しかったこと</dt>
                   <dd>bootstrapに頼らずなるべくcssで実装するようにしました。<br>
-                    scopeやhelper、pluckの使い方を学びました。
+                    <span>scope</span>や<span>helper</span>、<span>pluck</span>の使い方を学びました。
                   </dd>
                   <dt>機能</dt>
                   <dd>ゲストログイン / アカウント編集,退会機能/ 購入する機能 / レビュー機能 / お気に入り機能 / お問い合わせ/ 検索/ タグ機能 / 管理者機能</dd>
                   <dt>使用した技術</dt>
-                  <dd>Ruby on Rails / Ruby / hamlを使いました / css / JavaScript/ bootstrap </dd>
+                  <dd>Ruby on Rails / Ruby / <span>haml</span>を使いました / css / JavaScript/ bootstrap </dd>
                   <dt>URL</dt>
                   <dd>
                     <a href="#" target="_blank"></a>
@@ -186,11 +186,11 @@
                   <dt>説明</dt>
                   <dd>苺大福を予約するアプリです。</dd>
                   <dt>開発理由</dt>
-                  <dd>苺大福を電話で予約するお店が多いため、作成しました。</dd>
+                  <dd>私がよく行く和菓子屋さんは予約を電話でとっています。 いちご大福の予約サイトがあればいいなと思い制作しました。</dd>
                   <dt>難しかったこと</dt>
                   <dd>確認画面の実装、SimpleCalenderからの予約、<br>
-                    人数制限と休みの日は予約ができないようにする。
-                    Activejob,raketask、rspecの使い方を学びました。また、リファクタリングにも挑戦しました。
+                    helperを使って人数制限と休みの日は予約ができないようにしました。
+                    <span>Activejob</span>,<span>raketask</span>、<span>rspec</span>の使い方を学びました。また、リファクタリングにも挑戦しました。
                   </dd>
                   <dt>機能</dt>
                   <dd>ゲストログイン / 退会機能 / 予約機能 / お問い合わせ機能 / 管理者機能 / カレンダー /ステータス/非同期メール</dd>
@@ -283,7 +283,8 @@
                   </dd>
                   <dt>難しかったこと</dt>
                   <dd>非同期通信、フォロー機能、timeline機能<br>
-                    苦手だったフォロー機能と非同期通信に挑戦しました。コードのリファクタリングだったり、可読性が上がるように実装していきたいです。
+                    苦手だったフォロー機能と非同期通信に挑戦しました。またgemのbulletを使い
+                    <span>N＋1問題</span>について考えました。今後はrspecのテストコードをもっと増やしていきたいです。
                   </dd>
                   <dt>機能</dt>
                   <dd>ゲストログイン / 投稿機能 / いいね機能 / ブックマーク機能 / コメント機能 / 通知機能 / 検索機能 /フォロー機能 / タイムライン機能 / DM機能 / カレンダー / グループ機能 /タグ機能 /メール機能 </dd>
