[add]デプロイしたurl追加

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   <dt>使用した技術</dt>
                   <dd>Ruby on Rails / Ruby / html / css / bootstrap </dd>
                   <dt>URL</dt>
-                  <dd><a href="#" target="_blank"></a></dd>
+                  <dd><a href="https://ichigo-daihuku.herokuapp.com/reservations" target="_blank">ICHIGO大福予約サイトへ</a></dd>
                   <dt>GitHub<i class="fa-brands fa-github fa-2x"></i></dt>
                   <dd><a href=https://github.com/ayano309/ichigo-daihuku target="_blank">https://github.com/ayano309/ichigo-daihuku</a></dd>
                 </dl>
